--- a/src/main/resources/KafkaAndZk.properties
+++ b/src/main/resources/KafkaAndZk.properties
@@ -13,12 +13,12 @@ SMTP_PROTOCOL=smtp
 ###设置邮件服务器
 SMTP_SERVER=smtp.163.com
 ###设置邮件
-FROM_ADDRESS=youyujie13@163.com
+FROM_ADDRESS=
 ###设置用户
-SMTP_USER=youyujie13@163.com
+SMTP_USER=
 ###设置用户密码
-SMTP_PWD=youyujie796194
+SMTP_PWD=
 ###这里设置默认的抄送者
-COPY_TO_SEND=1098181195@qq.com,zhangsan@163.com
+COPY_TO_SEND=
 ###日志监控系统管理员邮件
-LOG_ADMIN=507229715@qq.com
+LOG_ADMIN=
